language/move-lang/tests/move_check/naming/friend_decl_unbound_module.exp
error[E03002]: unbound module
  ┌─ tests/move_check/naming/friend_decl_unbound_module.move:3:12
  │
3 │     friend 0x42::Nonexistent;
  │            ^^^^^^^^^^^^^^^^^ Unbound module '0x42::Nonexistent'

