language/move-lang/tests/move_check/naming/friend_decl_unbound_module.move
address 0x42 {
module M {
    friend 0x42::Nonexistent;
}
}
